  EntityDbConnection result packer logging improved a bit
  EntityEditModel.setPersistValueOnClear() added
  EntityImpl now rounds double values before setting them if maximumFractionDigits is specified
  Operation, AbstractOperation, Procedure and Function added
  DatabaseProvider.add/Get/Function/Procedure() added
  EntityDb.executeProcedure() added
  EntityDbRemote.executeProcedure() added
  EntityDb.exececuteStatement() removed
  TextValueLink.format field removed
  AbstractValueLink.translateModelValue() removed
  ItemRandomizer.RandomItem.enabled property added
  EntityDbConnection update and select for update functionality improved
  Entity.getCopy() was now working, setAs() moved from ValueMap to ValueChangeMap
  DefaultEntityTableModel.getValueAt() returns valueAsString for value list and foreign key properties
  EntityImpl.getValueAsString() now returns the referenced primary key as string for non-loaded foreign key values
  Major refactoring/renaming
  EntityImpl.isModified() now checks super.isModified() before going any further
  EntityValidator moved to Entities and renamed to Validator
  Configuration.COMPACT_ENTITY_PANEL_LAYOUT is now true by default
  EntityServerMonitorPanel layout changes
  EntityImpl now returns an empty entity for non-loaded foreign key values
  EntityConnectionImpl package private now
  EntityConnections added as a factory for the above class
  DatabaseConnections added as a factory for the DatabaseConnection class
  ConnectionPoolImpl package private
  ConnectionPools added as a factory class for the above
  DatabaseConnection, moved a few methods to PoolableConnection
  EntityGenerator refactored into tools.generator.EntityGeneratorModel and tools.generator.ui.EntityGeneratorPanel
  Dependency entanglement removed from common.db and framework.domain
  AbstractFilteredTablePanel.initializeFilterPanel() is no longer abstract, class renamed to FilteredTablePanel